[package]
name = "toggle-comment"
version = "0.1.0"
authors = ["Andrew Haigh <hello@nelf.in>"]
edition = "2018"
description = "A utility for setting or toggling the line-comment status of lines in plain text files in a do-what-i-mean fashion"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
